Correction formulaires avec indication label + correction contraste + title + font-awesone.min.css + lang + chargement script à la fin

--- a/style.css
+++ b/style.css
@@ -476,7 +476,7 @@ button {
 }
 
 .icon-md {
-    font-size: 30px!important;
+    font-size: 48px!important;
 }
 
 .icon-lg {
@@ -777,9 +777,11 @@ h4 {
 }
 
 .tc-white {
+    color: #fff!important;
+}
+.tc-black{
     color: #000000!important;
 }
-
 .btn-atomic-tangerine {
     background: #F3976C;
     color: #000000!important;
